    2. Defining a form parameter with the same name or ID as a JavaScript Form function will cause that function not to
       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
12-Feb-2004
Problems fixed:
    1. Window.open() using an empty name was replacing the main window rather than creating a new one.

 4-Dec-2003
Acknowledgements:
    Thanks to Andrew Bickerton for adding the following JavaScript support:
        Form.length          - returns the number of controls in a form
        Control.type         - returns a test description of the control type
        Control.defaultValue - returns the default value for text controls
        Initial page tokenizing now skips JavaScript while looking for header tags
        Writing into an empty frame no longer corrupts all empty frames

Problems fixed:
    1. Using JavaScript to write into an empty frame could change all empty frames to the same value

17-Oct-2003
Problems fixed:
    1. Bug #823433: document.cookie now defaults to the empty string, like IE and Mozilla, rather than null

 1-Oct-2003
Acknowledgements:
    Thanks to Patrick Lightbody for adding JavaScript support for the Style object

Additions:
    1. Added support for javascript HTMLElement.style property

30-Sep-2003
Problems fixed:
    1. HttpUnit no longer complains about not being able to find the Rhino jar (js.jar) is scripting is disabled
       before any pages are read.

16-Sep-2003
Acknowledgements:
    Thanks to Chris Hane for making it easier to add support for javascript properties and for providing support for
    getAttribute() to handle any property defined in the underlying Node

Additions:
    1. HTMLElement now supports a getAttribute method to return the value of any named attribute.