@@ -101,17 +101,18 @@ containing bad inputs. We therefore ask for the response from the bad open pool 
     WebResponse response = client.getResponse( "http://localhost/PoolEditor" );
     WebForm form = response.getFormWithID( "pool" );
 
-    form.setParameter( "away1", "Detroit Lions" );                        // (1) enter bad values into the form
+    form.setParameter( "away1", "Detroit Lions" );                         // (1) enter bad values into the form
     form.setParameter( "home1", "Denver Broncos" );
     form.setParameter( "home2", "Baltimore Ravens" );
     form.setParameter( "tiebreaker", "3" );
 
-    SubmitButton openButton = getSubmitButton( "save", "Open Pool" );     // (2) select the desired submit button
-    response = form.submit( saveButton );                                 // (3) submit the form
+    SubmitButton openButton = form.getSubmitButton( "save", "Open Pool" ); // (2) select the desired submit button
+    response = form.submit( saveButton );                                  // (3) submit the form
 
-    WebTable errorTable = response.getTableWithID( "errors" );            // (4) Look for the error table
+    WebTable errorTable = response.getTableWithID( "errors" );             // (4) Look for the error table
     assertNotNull( "No errors reported", errorTable );
-    String[][] cells = errorTable.asText();                               // (5) Convert non-empty cells to text
+    errorTable.purgeEmptyCells();                                          // (5) Remove any empty cells from the table
+    String[][] cells = errorTable.asText();                                // (6) Convert non-empty cells to text
     assertEquals( "Number of error messages provided", 2, cells.length - 1 );
     assertEquals( "Error message", "Tiebreaker is not a valid game", cells[1][0] );
     assertEquals( "Error message", "Game 2 has no away team", cells[2][0] );
@@ -122,6 +123,7 @@ containing bad inputs. We therefore ask for the response from the bad open pool 
 <li>We then select the "Open Pool" button to be included with the form submission.</li>
 <li>We want the response when we submit the form changes.</li>
 <li>We expect to find them in a table with "errors" as its ID.</li>
+<li>We are not interested in any empty cells used for formatting.</li>
 <li>Since we want to examine the textual content of any non-empty cells in the table, we ask that the table be converted
 to a two-dimensional string array. In this case, there should only be one non-blank cell in each row.</li></ol></p>
 
@@ -177,7 +179,7 @@ the pool itself. We will test this by verifying that the "save" submit buttons a
     assertNull( "Could still update the pool", form.getSubmitButton( "save" ) );  // (3) look for the buttons
 
     try {
-        request = form.getRequest();
+        WebRequest request = form.getRequest();
         request.setParameter( "home3", "Philadelphia Eagles" );                   // (4) try to change an entry
         fail( "Could still edit the pool" );
     } catch (IllegalRequestParameterException e) {}
